--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ html, body {
 
 #header {
   width: 100%;
-  height: 300px;
+  height: 250px;
   background-color: #7e9181;
 }
 
@@ -26,15 +26,16 @@ html, body {
   width: 200px;
   height: 200px;
   /* Align on header line */
-  top: 200px;
+  top: 150px;
   left: calc(50% - 100px);
 }
 
 #internal_content {
   display: block;
-  width: 500px;
+  max-width: 500px;
   margin: auto;
   padding-top: 100px;
+  padding-bottom: 30px;
 }
 
 #internal_content a {
@@ -45,12 +46,33 @@ html, body {
   color: #d001d0;
 }
 
+#internal_content a:active {
+  color: #f0f0f0;
+}
+
+#footer_info {
+  background-color: #101010;
+  color: #f0f0f0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#footer_info p {
+  display: block;
+  width: 500px;
+  margin: auto;
+}
+
 /* Classes */
 .block_content {
   background-color: #E8F7EE;
   color: #3F2A2B;
   border-radius: 5px;
   margin-bottom: 40px;
+}
+
+.block_content.last {
+  margin-bottom: 0px;
 }
 
 .block_content::after {
@@ -78,6 +100,13 @@ html, body {
   padding-top: 5px;
 }
 
+.block_content img {
+  display: block;
+  width: 166.6666666667px;
+  margin: auto;
+  margin-top: 10px;
+}
+
 .label_content {
   background-color: white;
   position: absolute;
@@ -92,6 +121,10 @@ html, body {
   display: block;
   width: 500px;
   margin: auto;
+}
+
+.label_content h1 {
+  padding-left: 5px;
 }
 
 .space {
