--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,8 @@ html, body {
 
 .block_content img {
   display: block;
-  width: 166.6666666667px;
+  max-width: 200px;
+  max-height: 200px;
   margin: auto;
   margin-top: 10px;
 }
