--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ html, body {
 
 #footer_info p {
   display: block;
-  width: 500px;
+  max-width: 500px;
   margin: auto;
 }
 
@@ -87,6 +87,8 @@ html, body {
   margin: 0;
   padding-top: 8px;
   padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
   text-align: center;
 }
 
@@ -120,7 +122,7 @@ html, body {
 
 .label_content * {
   display: block;
-  width: 500px;
+  max-width: 500px;
   margin: auto;
 }
 
