--- a/scss/main.scss
+++ b/scss/main.scss
@@ -70,7 +70,7 @@ html, body {
 
 #footer_info p {
 	display: block;
-	width: $contentWidth;
+	max-width: $contentWidth;
 	margin: auto;
 }
 
@@ -98,6 +98,8 @@ html, body {
 	margin: 0;
 	padding-top: 8px;
 	padding-bottom: 8px;
+	padding-left: 5px;
+	padding-right: 5px;
 	text-align: center;
 }
 
@@ -131,7 +133,7 @@ html, body {
 
 .label_content * {
 	display: block;
-	width: $contentWidth;
+	max-width: $contentWidth;
 	margin: auto;
 }
 
