--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,12 +2,14 @@
 $headerHeight: 250px;
 $contentWidth: 500px;
 /* Colors */
+$labelColor: #0A0908;
 $descriptiveContentText: #303030;
-$topicContentText: #3F2A2B;
+$topicContentText: #0A0908;
 
-$headerColor: #7e9181;
-$contentBackground: #565656;
-$contentBlockBackground: #E8F7EE;
+$headerColor: #c7b19d;
+$labelBackground: #F2F4F3;
+$contentBackground: #5E503F;
+$contentBlockBackground: #A9927D;
 $contentDescriptionBackground: #B8C4BB;
 /* Standard Tags */
 
@@ -33,7 +35,13 @@ html, body {
 #header_img {
 	$width: 200px;
 	$height: 200px;
-
+	
+	border-radius: 100px;
+	border: solid 5px #ffffcf;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-shadow: 0px 0px 10px white;
 	position: absolute;
 	width: $width;
 	height: $height;
@@ -122,7 +130,8 @@ html, body {
 }
 
 .label_content {
-	background-color: white;
+	background-color: $labelBackground;
+	color: $labelColor;
 	position: absolute;
 	width: 100%;
 	left: 0;
